Correção de bugs e adição de novas mecânicas

--- a/src/Todo
+++ b/src/Todo
@@ -1,18 +1,16 @@
-sistema de atacar
-atualizar o sistema de analisar territorio
-informações do reino
-criar a taverna (fazendo)
-fazer o sistema do ferreiro impactar no dano dos soldados
-atualizar o sistema de comida do andar
+fazer o sistema de diversos tipos de flechas
+fazer o sistema de inventário
 fazer um sistema de criação do mapa aleatório com monstros aleatórios em cada mapa e pontuação de chegar mais longe
-
+tem alguma porra errada no ferreiro
+sistema de salvar
+fazer o status de dormindo e de invisivel
 
 mapa desenhado
 
-                    vila goblin ---
-                         |
-baldur --- floresta --- rio
+                    vila goblin --- praia
+                         |         |
+baldur --- floresta --- rio --- aldeia
                          |
                       valkstad
                          |
-                      caverna
+                      caverna (boss)
